--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a class="nav-link active" href="#">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">About</a>
+    <a class="nav-link" href="#">Aboutt</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Contact</a>
